# safe-taichung

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/processed/: bike_theft_cleaned.csv  car_theft_cleaned.csv  district_population.csv  district_risk_summary.csv  district_statistics.csv  geocode_cache.json  hourly_risk_summary.csv  residential_burglary_cleaned.csv  scooter_theft_cleaned.csv  taichung_official_crime_5years.csv  taichung_theft_all.csv  taichung_theft_geocoded.csv
data/raw/: bike_theft_105.csv  bike_theft_106.csv  bike_theft_107.csv  bike_theft_108.csv  car_theft_105.csv  car_theft_106.csv  car_theft_107.csv  car_theft_108.csv  residential_burglary_105.csv  residential_burglary_106.csv  residential_burglary_107.csv  residential_burglary_108.csv  scooter_theft_105.csv  scooter_theft_106.csv  scooter_theft_107.csv  scooter_theft_108.csv  taichung_population_107.json
docs/: analysis_code.py  conversation_log.md  draft.md  route_api_plan.md
notebooks/: 01_taichung_crime_eda.ipynb
src/: __init__.py  geocoder.py  google_maps.py  risk_model.py
